Bug 898692 - Avoid wasted work in ArrayBufferObject::obj_trace(). r=sphink